Bug 393584 - Reference Images Tool shows full vector tools contextual menu at first run if no vector layer exist.
Summary: Reference Images Tool shows full vector tools contextual menu at first run if...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-27 17:03 UTC by Quiralta
Modified: 2018-05-04 14:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Quiralta 2018-04-27 17:03:50 UTC
Issue: The reference image tool provides the same contextual menu as the vectors on a new document *if* no vector layer exist.

To reproduce:
-make new document
-select the Ref-images-tool
-place one or more ref images
-right click on them

result: menu items group/ungroup and logical-operations are shown. If any of these are used, Krita makes a new vector layer and places all images there.

expected result: only applicable menu entries should display on right click.

Notes:

-Creating a vector layer prior to using the Ref-images-tool and properly selecting that layer, prevents the appearing of the full vector menu on first run.

-Creating a vector layer after using the Ref-images-tool and selecting the layer will remove the extra vector menu items. this is will "fix" the menu, to display properly.

-Using the extra menu items on the reference images will place them in a new vector layer, now if undo this steps, the images will go back to the Ref-images-Tool properly, after this even without the self-created vector layer, the menu will start displaying properly.

-Also once the menu has been "fixed" with any of the above, will reamin correct for the rest of the session.
Comment 1 joupent 2018-05-04 14:12:41 UTC
Git commit ba8095120fa920957498ba3e0c71690b2efb1817 by Jouni Pentikäinen.
Committed on 04/05/2018 at 14:09.
Pushed by jounip into branch 'master'.

Remove extraneous items in reference images tool context menu

M  +41   -25   plugins/tools/defaulttool/defaulttool/DefaultTool.cpp
M  +9    -1    plugins/tools/defaulttool/defaulttool/DefaultTool.h
M  +12   -0    plugins/tools/defaulttool/referenceimagestool/ToolReferenceImages.cpp
M  +2    -0    plugins/tools/defaulttool/referenceimagestool/ToolReferenceImages.h

https://commits.kde.org/krita/ba8095120fa920957498ba3e0c71690b2efb1817