Remove extraneous items in reference images tool context menu

BUG: 393584